--- a/meddelasida.html
+++ b/meddelasida.html
@@ -17,6 +17,7 @@
                 </div>
                 <p>
             <button><a href="meddelandeskickat.html">Skicka</a></button>
+            <button><a href="index.html">Ångra</a></button>
         </p>
         </div>
 </body>
