--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="user-avatar"><p><img src="sailor.jpg" alt="Gap" style="width: 100px; height: 100px" /></p>
             </div>
             <div class="user-facts">
-              <p>Namn - Gap</p>
+              <p>Namn - Gappy</p>
               <p>Ålder - 19</p>
               <p>Kön - Man</p>
               <p>Plats - N/A</p>
@@ -123,7 +123,7 @@
           <!--The Rock-->
           <div class="user-avatar"><img src="dwayne.jpg" alt="Dwanye 'The rock' Johnson " style="width: 100px; height: 100px" /></div>
           <div class="user-facts">
-            <p>Namn - Dwayne Johnson</p>
+            <p>Namn - Dwayne</p>
             <p>Ålder - 49</p>
             <p>Kön - Man</p>
             <p>Plats - Hollywood</p>
@@ -150,7 +150,7 @@
           </div>
           <div class="user-about">
             <p class="user-description">
-              Mjau, jag är Melbert. Fyllde precis 1 1/2 så kan äntligen va på den hä sidan lagligt! Älskarrrr fisk, speciellt "catfish"! Mjauddela!
+              Mjauuu, ja e Melbert. Fyllde precis 1 1/2 så kan äntligen va på den hä sidan lagligt! Tur fö dej, rawr. Älskarrrr fisk, speciellt "catfish"! Mjauddela!
             </p>
             <div class="user-nav">
               <button><a href="meddelasida.html">Meddela</a></button>
